kubernetes/namespace.yaml
# Namespace configuration for Application
apiVersion: v1
kind: Namespace
metadata:
  name: movie-recommender
  labels:
    app: movie-recommender
