kubernetes/backend-deployment.yaml
# Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: movie-recommender
  labels:
    app: backend
spec:
  replicas: 2 # change it to 1 if you want to run only one instance
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: davidh248/movie-backend:1.0 # use tag 1.0, not latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5001
